@@ -213,7 +213,7 @@ class GenericNonMultiplicativeRegistry(
         return all_units
 
     def _convert(
-        self, value: T, src: UnitsContainer, dst: UnitsContainer, inplace: bool = False
+        self, value: T, src: UnitsContainer, dst: UnitsContainer, inplace: bool = False, **ctx_kwargs: Any
     ) -> T:
         """Convert value from some source to destination units.
 
@@ -284,7 +284,7 @@ class GenericNonMultiplicativeRegistry(
             dst = self._add_ref_of_log_or_offset_unit(dst_offset_unit, dst)
 
         # Convert non multiplicative units to the dst.
-        value = super()._convert(value, src, dst, inplace, False)
+        value = super()._convert(value, src, dst, inplace, False, **ctx_kwargs)
 
         # Finally convert to offset units specified in destination
         if dst_offset_unit:
