@@ -19,6 +19,7 @@ Pint Changelog
 - Add membrane filtration flux and permeability dimensionality, and shorthand "LMH". (#2116)
 - Fix find_shortest_path to use breadth first search (#2146)
 - Fix typo in ``pyproject.toml``: rename ``AS_MIP`` to ``HAS_MIP`` so that MIP support is correctly detected. (#2152)
+- Fix handling of extra arguments in conversion with enabled contexts (#2172)
 
 
 0.24.4 (2024-11-07)
